--- a/Parfume/Views/Home/SaleCash.cshtml
+++ b/Parfume/Views/Home/SaleCash.cshtml
@@ -32,6 +32,15 @@
             <label class="labelColor">İnstagram səhfəsi</label>
             <input type="text" class="form-control InstagramAddress " />
         </div>
+        <div class="col-3 mt-3">
+            <label class="labelColor">Doğum tarixı</label>
+            <div class="input-group date" id="Birthdate" data-target-input="nearest">
+                <input type="text" required data-val-required="Vaxtı qeyd etməlisiz" id="Birth_Date" class="form-control datetimepicker-input" data-target="#Birthdate" />
+                <div class="input-group-append" data-target="#Birthdate" data-toggle="datetimepicker">
+                    <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+                </div>
+            </div>
+        </div>
     </div>
 
 
