--- a/Parfume/Views/Shared/_Layout.cshtml
+++ b/Parfume/Views/Shared/_Layout.cshtml
@@ -141,6 +141,10 @@
                                 </a>
                             </li>
                             <li>
+                                <a asp-controller="Customer" asp-action="AllCustomerBirthday">
+                                    <i class="fas fa-users-cog"></i>Doğum günü olan müştərilər                                </a>
+                            </li>
+                            <li>
                                 <a asp-controller="Customer" asp-action="CreateCustomer">
                                     <i class="fas fa-users-cog"></i> Müştərilər yarat
                                 </a>
