--- a/Parfume/Views/Customer/AllCustomer.cshtml
+++ b/Parfume/Views/Customer/AllCustomer.cshtml
@@ -22,6 +22,7 @@
                 <tr>
                     <th style="width:80px; ">№<br /><input type="text" placeholder="Axtar" class="form-control" /></th>
                     <th style="width:180px; ">Adı, soyadı, ata adı <br /><input type="text" placeholder="Axtar" class="form-control" /></th>
+                    <th>Doğum tarixi<br /><input type="text" placeholder="Axtar" class="form-control" /></th>
                     <th>Fin<br /><input type="text" placeholder="Axtar" class="form-control" /></th>
                     <th>Nömrəsi<br /><input type="text" placeholder="Axtar" class="form-control" /></th>
                     <th style="width:80px; ">Sifariş sayı<br /><input type="text" placeholder="Axtar" class="form-control" /></th>
@@ -38,13 +39,14 @@
                     <tr data-href="@Url.Action("CustomerDetails", "Customer", new { customerId = item.Id })">
                         <td>@index</td>
                         <td>@item.Name @item.Surname @item.FatherName  </td>
+                        <td>@item.Birthday?.ToString("dd/MMMM/yyyy")</td>
                         <td>@item.Fincode</td>
                         <td>@item.BaseNumber</td>
                         <td>@item.Orders.Count</td>
                         <td>@item.WhoIsOkey</td>
                         <td>@item.Note</td>
                         <td>
-                            @if (IsAdmin)
+                            @if (IsAdmin || User.IsInRole("Seller"))
                             {
                                 <button type="button" class="btn btn-info customerEdit" data-href="@Url.Action("CustomerEdit","Customer",new {customerId=item.Id })" style="  width:80px; ">
                                     Edit
