--- a/Parfume/Views/Customer/CustomerChange.cshtml
+++ b/Parfume/Views/Customer/CustomerChange.cshtml
@@ -42,6 +42,15 @@
             <label class="labelColor">Kim okey verib?</label>
             <input type="text" class="form-control WhoIsOkey " value="@Model.WhoIsOkey" />
         </div>
+        <div class="col-3 mt-3">
+            <label class="labelColor">Doğum tarixı</label>
+            <div class="input-group date" id="Birthdate" data-target-input="nearest">
+                <input type="text" required value="@Model.Birthday?.ToString()" data-val="true" data-val-required="Vaxtı qeyd etməlisiz" id="Birth_Date" class="form-control datetimepicker-input" data-target="#Birthdate" />
+                <div class="input-group-append" data-target="#Birthdate" data-toggle="datetimepicker">
+                    <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <h3 class="mb-3 mt-5 text-center">Telefon məlumatları</h3>
