--- a/Parfume/Views/Home/SaleCredite.cshtml
+++ b/Parfume/Views/Home/SaleCredite.cshtml
@@ -116,13 +116,14 @@
                 <option value="4">4 ay</option>
                 <option value="5">5 ay</option>
                 <option value="6">6 ay</option>
+                <option value="8">8 ay</option>
                 <option value="12">12 ay</option>
             </select>
 
         </div>
         <div class="col-3">
             <label class="labelColor">Aylıq ödəniş</label>
-            <input type="text" class="form-control monthlyPayment " />
+            <input type="text" readonly class="form-control monthlyPayment " />
         </div>
 
         <div class="col-3">
