--- a/Parfume/Views/Shared/_Layout.cshtml
+++ b/Parfume/Views/Shared/_Layout.cshtml
@@ -142,7 +142,8 @@
                             </li>
                             <li>
                                 <a asp-controller="Customer" asp-action="AllCustomerBirthday">
-                                    <i class="fas fa-users-cog"></i>Doğum günü olan müştərilər                                </a>
+                                    <i class="fas fa-users-cog"></i>Doğum günü olan müştərilər
+                                </a>
                             </li>
                             <li>
                                 <a asp-controller="Customer" asp-action="CreateCustomer">
@@ -155,6 +156,11 @@
                     <li>
                         <a asp-controller="Customer" asp-action="BlockCustomer">
                             <i class="fas fa-user-lock"></i> Blok olunan müştərilər
+                        </a>
+                    </li>
+                    <li>
+                        <a asp-controller="Card" asp-action="Index">
+                            <i class="fas fa-credit-card"></i>Kartlar
                         </a>
                     </li>
                     <li>
