--- a/Parfume/Views/Home/SaleCredite.cshtml
+++ b/Parfume/Views/Home/SaleCredite.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model IEnumerable<Parfume.Models.Card>
 @{
     ViewData["Title"] = "SaleCredite";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -43,6 +43,8 @@
             <label class="labelColor">Kim okey verib?</label>
             <input type="text" class="form-control WhoIsOkey " />
         </div>
+
+       
         <div class="col-3 mt-3">
             <label class="labelColor">Doğum tarixı</label>
             <div class="input-group date" id="Birthdate" data-target-input="nearest">
@@ -52,6 +54,8 @@
                 </div>
             </div>
         </div>
+
+
     </div>
 
     <h3 class="mb-3 mt-5 text-center">Telefon məlumatları</h3>
@@ -129,6 +133,15 @@
         <div class="col-3">
             <label class="labelColor">Toplam qiymət</label>
             <input type="number" class="form-control totalPrice " />
+        </div>
+        <div class="col-3 mt-3">
+            <label class="labelColor">Kart</label>
+            <select class="form-control cardInfo">
+                @foreach (var item in Model)
+                {
+                    <option value="@item.Id">@item.Name @item.Limit</option>
+                }
+            </select>
         </div>
         <div class="col-3 mt-3">
             <label class="labelColor">Tarix</label>
