--- a/Parfume/Views/Home/HistoryDetails.cshtml
+++ b/Parfume/Views/Home/HistoryDetails.cshtml
@@ -132,6 +132,10 @@
             <input type="text" readonly class="form-control  text-center  " value="@Model.Debt" />
         </div>
         <div class="col-3 mt-3">
+            <label class="labelColor">Kart adi</label>
+            <input type="text" readonly class="form-control  text-center  " value="@Model.Card.Name" />
+        </div>
+        <div class="col-3 mt-3">
             <label class="labelColor">Satışın qeydə alındığı tarix</label>
             <input type="text" readonly class="form-control  text-center  " value="@Model.CreateDate.ToString("dd/MM/yyyy")" />
         </div>
