--- a/Parfume/Views/Card/Index.cshtml
+++ b/Parfume/Views/Card/Index.cshtml
@@ -45,7 +45,12 @@
             return false;
         });
     })</script>
-
+<script src="~/CustomScript/Scripts/AddCard.js"></script>
+<div class="row">
+    <div class="col-3">
+        <a class=" btn btn-success addCard" data-href="@Url.Action("CreateCard","Card")">Yeni kard</a>
+    </div>
+</div>
 <div class="card" style="overflow:auto">
     <div class="card-body pb-4">
         <table id="table" class="table table-hover table-bordered ">
@@ -56,6 +61,7 @@
                     <th style="width:180px; ">Limit <br /><input type="text" placeholder="Axtar" class="form-control" /></th>
                     <th>Activ<br /><input type="text" placeholder="Axtar" class="form-control" /></th>
                     <th>Tarix<br /><input type="text" placeholder="Axtar" class="form-control" /></th>
+                    <th>Əməliyyat<br /><input type="text" placeholder="Axtar" class="form-control" /></th>
                 </tr>
             </thead>
             <tbody class="TableBodyDetails">
@@ -67,7 +73,7 @@
                     {
                         colorDebt = "red";
                     }
-                <tr style="background:@colorDebt" data-href="@Url.Action("CardCustomerDetails","Card",new {orderId=item.Id })">
+                <tr style="background:@colorDebt" data-href="@Url.Action("CardCustomerDetails","Card",new {cardId=item.Id })">
                     <td>@index</td>
                     <td>@item.Name</td>
                     <td>@item.Limit</td>
@@ -80,6 +86,12 @@
                         <td>Active deyil</td>
                     }
                     <td>@item.CreateDate.ToString("dd/MM/yyyy")</td>
+                    <td>
+                        <button type="button"   class="btn  cardDelete " data-cardId="@item.Id" style="background: #c79957; width:80px; " >
+                           Silmək
+                        </button>
+
+                    </td>
 
                 </tr>
                     index++;
@@ -94,4 +106,8 @@
     $(document).on("dblclick", ".TableBodyDetails tr", function () {
         window.location.href = $(this).attr('data-href');
     })
+    $(document).on("click", ".addCard", function () {
+        window.location.href = $(this).attr('data-href');
+    })
+    
 </script>
