--- a/Parfume/Views/Home/Pay.cshtml
+++ b/Parfume/Views/Home/Pay.cshtml
@@ -77,7 +77,10 @@
                 <input type="number" readonly class="form-control  text-center  " value="@Model.Cost" />
             </div>
         }
-
+        <div class="col-3">
+            <label class="labelColor">Kartin adi</label>
+            <input type="text" readonly class="form-control  text-center  " value="@Model.Card?.Name" />
+        </div>
         <div class="col-2">
             <label class="labelColor">Borc</label>
             <input type="number" readonly class="form-control  text-center  " value="@Model.Debt" />
