--- a/Parfume/Views/Card/ChangeCard.cshtml
+++ b/Parfume/Views/Card/ChangeCard.cshtml
@@ -1,18 +1,16 @@
 ﻿@model IEnumerable<Parfume.Models.Customer>
-@{ 
+@{
     var IsAdmin = User.IsInRole("Admin");
 }
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-
-
 <script>
     $(document).ready(function () {
-
-
+        $(document).on("click", ".addCard", function () {
+            window.location.href = $(this).attr('data-href');
+        })
     })</script>
 
 <div class="card" style="overflow:auto">
@@ -22,10 +20,9 @@
                 <tr>
                     <th style="width:80px; ">№<br /><input type="text" placeholder="Axtar" class="form-control" /></th>
                     <th style="width:180px; ">Adı, soyadı, ata adı <br /><input type="text" placeholder="Axtar" class="form-control" /></th>
-                    <th style="width:80px; ">Doğum tarixi<br /><input type="text" placeholder="Axtar" class="form-control" /></th>
-                    <th style="width:80px; ">Fin<br /><input type="text" placeholder="Axtar" class="form-control" /></th>
-                    <th style="width:80px; ">Nömrəsi<br /><input type="text" placeholder="Axtar" class="form-control" /></th>
-                    <th style="width:90px; ">İş yeri<br /><input type="text" placeholder="Axtar" class="form-control" /></th>
+                    <th>Doğum tarixi<br /><input type="text" placeholder="Axtar" class="form-control" /></th>
+                    <th>Fin<br /><input type="text" placeholder="Axtar" class="form-control" /></th>
+                    <th>Nömrəsi<br /><input type="text" placeholder="Axtar" class="form-control" /></th>
                     <th style="width:80px; ">Sifariş sayı<br /><input type="text" placeholder="Axtar" class="form-control" /></th>
                     <th style="width:180px; ">Kim okeyliyib<br /><input type="text" placeholder="Axtar" class="form-control" /></th>
                     <th style="width:180px; ">Qeyd<br /><input type="text" placeholder="Axtar" class="form-control" /></th>
@@ -43,18 +40,14 @@
                         <td>@item.Birthday?.ToString("dd/MMMM/yyyy")</td>
                         <td>@item.Fincode</td>
                         <td>@item.BaseNumber</td>
-                        <td>@item.WorkAddress</td>
                         <td>@item.Orders.Count</td>
                         <td>@item.WhoIsOkey</td>
                         <td>@item.Note</td>
                         <td>
                             @if (IsAdmin || User.IsInRole("Seller"))
                             {
-                                <button type="button" class="btn btn-info customerEdit" data-href="@Url.Action("CustomerEdit","Customer",new {customerId=item.Id })" style="  width:80px; ">
-                                    Edit
-                                </button>
-                                <button type="button" class="btn  modalCustomer" data-CustomerId="@item.Id" style="background: #c79957; width:80px; " data-toggle="modal" data-target="#exampleModalCenter">
-                                    Blok et
+                                <button type="button" class="btn btn-info addCard" data-href="@Url.Action("ChangeCustomerCard","Card",new {customerId=item.Id })" style="  width:80px; ">
+                                    Edit Card
                                 </button>
                             }
 
@@ -67,28 +60,5 @@
         </table>
     </div>
 </div>
-<!-- Button trigger modal -->
-<!-- Modal -->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLongTitle">Qeyd</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <textarea class="form-control noteBlock"></textarea>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Bağla</button>
-                <button type="button" class="btn btn-primary blockUser" data-CustomerIdBlock="">Təsdiqlə</button>
-            </div>
-        </div>
-    </div>
-</div>
 
- 
 <script src="~/CustomScript/Scripts/AllCustomer.js"></script>
- 
