--- a/Parfume/Views/Shared/_Layout.cshtml
+++ b/Parfume/Views/Shared/_Layout.cshtml
@@ -166,7 +166,7 @@
                         <ul class="collapse list-unstyled" id="CardInfo">
                             <li>
                                 <a asp-controller="Card" asp-action="Index">
-                                     <i class="fas fa-money-bill"></i>
+                                    <i class="fas fa-money-bill"></i>
                                     Kart əlavə et
                                 </a>
                             </li>
@@ -174,6 +174,12 @@
                                 <a asp-controller="Card" asp-action="CardAddCusmoter">
                                     <i class="fas fa-cash-register"></i>
                                     Müştəriyə kart əlavə et
+                                </a>
+                            </li>
+                            <li>
+                                <a asp-controller="Card" asp-action="ChangeCard">
+                                    <i class="fas fa-cash-register"></i>
+                                    Kart dəyişdirmək
                                 </a>
                             </li>
                         </ul>
